streamlined the displays so my apps look more like the TPP app. modified some small things here and there. made a comment box and prolific link page for pilot

--- a/demographics/Circle.html
+++ b/demographics/Circle.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-    Circle
+    <p style="text-align: center; font-size: 26px; "> Self-other circle </p>
 
 {{ endblock }}
 
@@ -8,6 +8,15 @@
 
 
 <style>
+
+    body {
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin-top: 4vw;
+        background-color: #f4f4f4;
+    }
+
     table.IOS {
         border-collapse: collapse;
         width: 70%;
