--- a/demographics/Ladder.html
+++ b/demographics/Ladder.html
@@ -1,6 +1,22 @@
 {{ block title }}
 
-    Income ladder
+    <p style="text-align: center; font-size: 26px; "> Income ladder </p>
+
+{{ endblock }}
+
+{{ block style }}
+
+    <style>
+
+        body {
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin-top: 4vw;
+            background-color: #f4f4f4;
+        }
+
+    </style>
 
 {{ endblock }}
 
@@ -24,7 +40,7 @@
     <input type="hidden" name="income_ladder" id="income_ladder">
 
     <div style="display: flex; justify-content: flex-end">
-        {% next_button %}
+        {{ next_button }}
     </div>
 
 <style>
