--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-Anti-social rule following task
+<p style="text-align: center; font-size: 26px; "> Anti-social rule following </p>
 
 {{ endblock }}
 
@@ -12,6 +12,24 @@ Anti-social rule following task
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
+
+        body {
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin-top: 4vw;
+            background-color: #f4f4f4;
+        }
+
+        .responsive-div {
+            width: 90%; /* Default width */
+            transform-origin: top left; /* Ensure scaling starts from top-left */
+            transform: scale(1); /* Default scale */
+            transition: transform 0.3s ease; /* Smooth scaling */
+            border:0px solid black;
+            margin-left:auto;
+            margin-right:auto;
+        }
 
         .wrapper {
           display: grid;
@@ -197,57 +215,53 @@ Anti-social rule following task
             If you do, X points are taken away from a charity.
             If you don't, the charity keeps those points.
         </p>
-        <p>
-            Here are the sliders:
-        </p>
-
-        <h5 style="color: #0d6efd">Move the slider in the middle of each line on the value 50.</h5>
         <br>
 
-        <div id="slider-group-container">
+        <div class='responsive-div'>
+            <p style="text-align: center;">
+                <strong>Move the slider in the middle of each line on the value 50.</strong>
+            </p>
+
             <!-- Slider 1 -->
-            <div class="slider-group">
-                <div style="display: flex; justify-content: space-between; align-items: center;">
-                    <span><b>0</b></span>
-                    <span style="flex-grow: 1; margin: 0 10px;">
-                        <input type="hidden" name="slider1_moved" id="check_slider1" value="0" />
-                        <input type="range" name="slider1" id="slider1" min="0" max="100" class="hidden-thumb" />
-                    </span>
-                    <span><b>100</b></span>
-                </div>
-                <div style="text-align: center;"><output id="output1" style="color: #0d6efd"></output></div>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <span>0</span>
+                <span style="flex-grow: 1; margin: 0 10px;">
+                    <input type="hidden" name="slider1_moved" id="check_slider1" value="0" />
+                    <input type="range" name="slider1" id="slider1" min="0" max="100" class="hidden-thumb" />
+                </span>
+                <span>100</span>
             </div>
+            <div style="text-align: center;"><output id="output1" style="color: #0d6efd"></output></div>
+
 
             <!-- Slider 2 -->
-            <div class="slider-group">
-                <div style="display: flex; justify-content: space-between; align-items: center;">
-                    <span><b>0</b></span>
-                    <span style="flex-grow: 1; margin: 0 10px;">
-                        <input type="hidden" name="slider2_moved" id="check_slider2" value="0" />
-                        <input type="range" name="slider2" id="slider2" min="0" max="100" class="hidden-thumb" />
-                    </span>
-                    <span><b>100</b></span>
-                </div>
-                <div style="text-align: center;"><output id="output2" style="color: #0d6efd"></output></div>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <span>0</span>
+                <span style="flex-grow: 1; margin: 0 10px;">
+                    <input type="hidden" name="slider2_moved" id="check_slider2" value="0" />
+                    <input type="range" name="slider2" id="slider2" min="0" max="100" class="hidden-thumb" />
+                </span>
+                <span>100</span>
             </div>
+            <div style="text-align: center;"><output id="output2" style="color: #0d6efd"></output></div>
+
 
             <!-- Slider 3 -->
-            <div class="slider-group">
-                <div style="display: flex; justify-content: space-between; align-items: center;">
-                    <span><b>0</b></span>
-                    <span style="flex-grow: 1; margin: 0 10px;">
-                        <input type="hidden" name="slider3_moved" id="check_slider3" value="0" />
-                        <input type="range" name="slider3" id="slider3" min="0" max="100" class="hidden-thumb" />
-                    </span>
-                    <span><b>100</b></span>
-                </div>
-                <div style="text-align: center;"><output id="output3" style="color: #0d6efd"></output></div>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <span>0</span>
+                <span style="flex-grow: 1; margin: 0 10px;">
+                    <input type="hidden" name="slider3_moved" id="check_slider3" value="0" />
+                    <input type="range" name="slider3" id="slider3" min="0" max="100" class="hidden-thumb" />
+                </span>
+                <span>100</span>
             </div>
-        </div>
+            <div style="text-align: center;"><output id="output3" style="color: #0d6efd"></output></div>
 
-        <!-- Error message -->
-        <div id="error-message" style="display: none; color: red; text-align: center; margin-top: 10px;">
-            Please move all sliders before continuing.
+
+            <!-- Error message -->
+            <div id="error-message" style="display: none; color: red; text-align: center; margin-top: 10px;">
+                Please move all sliders before continuing.
+            </div>
         </div>
 
         <div style="display: flex; justify-content: flex-end">
