--- a/demographics/RelationalMobility.html
+++ b/demographics/RelationalMobility.html
@@ -1,6 +1,22 @@
 {{ block title }}
 
-    Relational Mobility questionnaire
+    <p style="text-align: center; font-size: 26px; "> Relational Mobility questionnaire </p>
+
+{{ endblock }}
+
+{{ block style }}
+
+    <style>
+
+        body {
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin-top: 4vw;
+            background-color: #f4f4f4;
+        }
+
+    </style>
 
 {{ endblock }}
 
