stitched extra tasked in settings

--- a/demographics/Ladder.html
+++ b/demographics/Ladder.html
@@ -22,6 +22,8 @@
 
 {{ block content }}
 
+<div class="card-body">
+
     <p>
         Imagine this ladder represents the income distribution in your country.
         The top represents the people who have a high income/are better off,
@@ -43,7 +45,10 @@
         {{ next_button }}
     </div>
 
+</div>
+
 <style>
+
     #ladder-container {
         position: relative;
         width: 160px;
