--- a/demographics/Payment.html
+++ b/demographics/Payment.html
@@ -22,6 +22,8 @@
 
 {{ block content }}
 
+<div class="card-body">
+
     <p>
         The study is over.
     </p>
@@ -45,6 +47,7 @@
             {% next_button %}
             </div>
     </div>
+</div>
 
     <!---div class="panel panel-default" style="margin-bottom:10px">
         <div class="panel-body">
