--- a/demographics/RelationalMobility.html
+++ b/demographics/RelationalMobility.html
@@ -22,6 +22,8 @@
 
 {{ block content }}
 
+<div class="card-body">
+
 <!--    <p>-->
 <!--        Please answer the following questions. These are used for demographic purposes only.-->
 <!--        This information will not be associated with your name. You remain anonymous to all the other players and the experimenters.-->
@@ -35,6 +37,8 @@
     <div style="display: flex; justify-content: flex-end">
         {% next_button %}
     </div>
+
+</div>
 
 
 {{ endblock }}
