--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -307,12 +307,13 @@
         In this new task, you will observe the behaviour of another participant and give your opinion of that behaviour.
     </p>
     <p>
-        In a previous, separate survey, a player got the opportunity to roll a die and collect the number of points on it as bonus.
-        The bonus was paid based on the number the player reported, not the number they actually drew.
-        As such, they could lie and report a different number than that on the dice they threw.
+        In a previous, separate survey, a player got the opportunity to roll a die and collect the number of points on it as a bonus.
+        The bonus was paid based on the number the player reported, not the number they actually threw.
+        As such, they could lie and report a different number than that on the dice they threw,
+        even though they were explicitly told to report the number they threw.
     </p>
     <p>
-        Below is the actual number they drew (die thrown) along with the bonus they reported and were paid (die reported):
+        Below is the actual number they threw (die thrown) along with the bonus they reported and were paid (die reported):
     </p>
 
 
@@ -381,10 +382,20 @@
                 <output id="output1"></output>
             </span>
         </div>
+    </div>
 
-        <br>
+    <br>
+    <p>
+        Now, you can send X points to the other person, or keep those points to yourself.
+        Each point sent is tripled.
+        The other person can transfer all, some, or none of the those (tripled) points back to you.
+        (The other person already indicated their decision in the previous survey.
+        Your answers will be matched once all the data is collected).
+    </p>
+
+    <div class='responsive-div'>
         <p style="text-align: center;">
-            <strong>How much do you want to send to the other player?</strong>
+            <strong>How much do you want to send to the other person?</strong>
         </p>
         <!-- Slider 2-->
         <div style="display: flex; justify-content: space-between; align-items: center;">
@@ -406,6 +417,11 @@
             <span style="color: #0d6efd">
                 <output id="output2"></output>
             </span>
+        </div>
+
+        <!-- Error message -->
+        <div id="error-message" style="display: none; color: red; text-align: center; margin-top: 10px;">
+            Please move all sliders before continuing.
         </div>
     </div>
 
