relational mobility page example

--- a/demographics/Circle.html
+++ b/demographics/Circle.html
@@ -103,7 +103,10 @@
         Once you move the slider below, a pair of circles will appear in the box.
         The position of the slider will determine how much the circles overlap.
         This overlap represents the relationship between you and your country.
-        Please position the slider to reflect how connected you feel to your country.
+    </p>
+
+    <p style="text-align: center;">
+        <strong>Please position the slider to reflect how connected you feel to your country.</strong>
     </p>
 
     <table class="IOS">
