--- a/demographics/Ladder.html
+++ b/demographics/Ladder.html
@@ -29,9 +29,9 @@
         The top represents the people who have a high income/are better off,
         and the bottom represents those who have a low income/are worst off.
     </p>
-    <h5>
-        Where would you be, based on your household income, on that ladder?
-    </h5>
+    <p style="text-align: center;">
+        <strong>Where would you be, based on your household income, on that ladder?</strong>
+    </p>
 
     <div id="ladder-container">
         {% for i in ladder_values %}
