fixes discussed in meeting

--- a/demographics/CommentBox.html
+++ b/demographics/CommentBox.html
@@ -23,8 +23,8 @@
 {{ block content }}
 
 <div class="card-body">
-    This study is new, and we are still piloting it. As such, we really appreciate feedback.
-    If you have any comments on the implementation of the study, the clarity of the task, or on the user interface, please write it down below.
+    This study is new, and we are still testing it. As such, we really appreciate feedback.
+    Could you tell us, in your own words, what the study was about?
 
     {{ formfield player.comment_box label='' }}
 </div>
