--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -304,58 +304,59 @@
 <div class="card-body">
 
     <p>
-        In this new task, you will observe the behaviour of another participant and give your opinion of that behaviour.
+        In this new part, you will observe the behaviour of another participant and give your opinion of that behaviour.
     </p>
     <p>
-        In a previous, separate survey, a player got the opportunity to roll a die and collect the number of points on it as a bonus.
-        The bonus was paid based on the number the player reported, not the number they actually threw.
+        In a previous, separate survey, a person got the opportunity to roll a die and collect the number of points on it as a bonus.
+        Below is <b>the number they got after throwing the die: </b>
+    </p>
+
+    <div class='dice-container'>
+        <div class="dice" id="dice1">
+            <div class="dot" id="dice1-1"></div>
+            <div class="dot" id="dice1-2"></div>
+            <div class="dot" id="dice1-3"></div>
+            <div class="dot" id="dice1-4"></div>
+            <div class="dot" id="dice1-5"></div>
+            <div class="dot" id="dice1-6"></div>
+            <div class="dot" id="dice1-7"></div>
+            <div class="dot" id="dice1-8"></div>
+            <div class="dot" id="dice1-9"></div>
+        </div>
+        <div>
+            Die thrown
+        </div>
+    </div>
+    <br>
+
+    <p>
+        However, the bonus was paid based on the number the person reported, not the number they actually threw.
         As such, they could lie and report a different number than that on the dice they threw,
         even though they were explicitly told to report the number they threw.
     </p>
     <p>
-        Below is the actual number they threw (die thrown) along with the bonus they reported and were paid (die reported):
+        Below is <b>the number they reported and were paid: </b>
     </p>
 
-
-    <div class='responsive-div'>
     <div class='dice-container'>
-        <br>
-        <div class="row">
-            <div class="column">
-                <div class="dice" id="dice1">
-                    <div class="dot" id="dice1-1"></div>
-                    <div class="dot" id="dice1-2"></div>
-                    <div class="dot" id="dice1-3"></div>
-                    <div class="dot" id="dice1-4"></div>
-                    <div class="dot" id="dice1-5"></div>
-                    <div class="dot" id="dice1-6"></div>
-                    <div class="dot" id="dice1-7"></div>
-                    <div class="dot" id="dice1-8"></div>
-                    <div class="dot" id="dice1-9"></div>
-                </div>
-                <div>
-                    Die thrown
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="dice" id="dice2">
-                    <div class="dot" id="dice2-1"></div>
-                    <div class="dot" id="dice2-2"></div>
-                    <div class="dot" id="dice2-3"></div>
-                    <div class="dot" id="dice2-4"></div>
-                    <div class="dot" id="dice2-5"></div>
-                    <div class="dot" id="dice2-6"></div>
-                    <div class="dot" id="dice2-7"></div>
-                    <div class="dot" id="dice2-8"></div>
-                    <div class="dot" id="dice2-9"></div>
-                </div>
-                <div>
-                    Die reported
-                </div>
-            </div>
+        <div class="dice" id="dice2">
+            <div class="dot" id="dice2-1"></div>
+            <div class="dot" id="dice2-2"></div>
+            <div class="dot" id="dice2-3"></div>
+            <div class="dot" id="dice2-4"></div>
+            <div class="dot" id="dice2-5"></div>
+            <div class="dot" id="dice2-6"></div>
+            <div class="dot" id="dice2-7"></div>
+            <div class="dot" id="dice2-8"></div>
+            <div class="dot" id="dice2-9"></div>
+        </div>
+        <div>
+            Die reported
         </div>
     </div>
+
+    <br>
+    <div class='responsive-div'>
 
         <br>
         <p style="text-align: center;">
@@ -388,9 +389,7 @@
     <p>
         Now, you can send X points to the other person, or keep those points to yourself.
         Each point sent is tripled.
-        The other person can transfer all, some, or none of the those (tripled) points back to you.
-        (The other person already indicated their decision in the previous survey.
-        Your answers will be matched once all the data is collected).
+        The other person can transfer all, some, or none of those (tripled) points back to you.
     </p>
 
     <div class='responsive-div'>
