free rider narratives done

--- a/free_rider/Narratives.html
+++ b/free_rider/Narratives.html
@@ -23,8 +23,15 @@
 
     <div class="card-body">
         <p>
-            Free rider narratives
+            In this part, we will ask you to answer four short questions.
         </p>
+
+        <p>
+            Please indicate to what extent you agree or disagree with the following statements.
+        </p>
+
+        {{ formfields }}
+
     </div>
 
 
