added a player label field to see what's wrong with heroku sessions

--- a/dice_task/Filler.html
+++ b/dice_task/Filler.html
@@ -26,6 +26,8 @@
     This task is now over. When you press next, you will start the next short task.
   </p>
 
+    {{ formfields }}
+
     <div style="display: flex; justify-content: flex-end">
         <button class="btn btn-primary">Next</button>
     </div>
