6 RM questions for pilot and addes progress bar code to all my apps

--- a/free_rider/Narratives.html
+++ b/free_rider/Narratives.html
@@ -1,6 +1,14 @@
 {{ block title }}
 
     <p style="text-align: center; font-size: 26px; "> Free-rider narratives </p>
+
+<div style="display: flex; justify-content: center">
+    <label>
+        <progress value="{{ participant.progress }}" max="{{ total_pages }}">
+        </progress>
+    </label>
+</div>
+
 {{ endblock }}
 
 {{ block style }}
