--- a/demographics/Circle.html
+++ b/demographics/Circle.html
@@ -1,6 +1,13 @@
 {{ block title }}
 
-    <p style="text-align: center; font-size: 26px; "> Self-other circle </p>
+    <p style="text-align: center; font-size: 26px; "> End survey </p>
+
+<div style="display: flex; justify-content: center">
+    <label>
+        <progress value="{{ participant.progress }}" max="{{ total_pages }}">
+        </progress>
+    </label>
+</div>
 
 {{ endblock }}
 
