--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -2,6 +2,13 @@
 
 <p style="text-align: center; font-size: 26px; "> Dice task </p>
 
+<div style="display: flex; justify-content: center">
+    <label>
+        <progress value="{{ participant.progress }}" max="{{ total_pages }}">
+        </progress>
+    </label>
+</div>
+
 
 {{ endblock }}
 
